<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_1"
        android:title="@string/menu_1"
        android:icon="@drawable/ic_launcher_foreground"
        />
    <item
        android:id="@+id/menu_2"
        android:title="@string/menu_2"
        />
    <item
        android:id="@+id/menu_3"
        android:title="@string/menu_3"
        />

</group>
    <item android:title="@string/sub_menu"
        android:icon="@drawable/ic_launcher_foreground"
       >
        <menu>
            <item
                android:id="@+id/menu_4"
                android:title="@string/menu_4"
                android:icon="@drawable/ic_launcher_foreground"/>
            <item
                android:id="@+id/menu_5"
                android:title="@string/menu_5" />
        </menu>
    </item>
</menu>